14_array_max/grade.txt
Grading at Sun Sep 29 17:43:59 UTC 2019
Attempting to compile arrayMax.c 
arrayMax.c: In function ‘arrayMax’:
arrayMax.c:15:10: error: ‘Max’ undeclared (first use in this function)
   return Max;  
          ^
arrayMax.c:15:10: note: each undeclared identifier is reported only once for each function it appears in
arrayMax.c: At top level:
arrayMax.c:18:3: error: expected identifier or ‘(’ before ‘else’
   else
   ^
arrayMax.c:20:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
arrayMax.c: In function ‘arrayMax’:
arrayMax.c:17:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
